robotic-codes/src/test/test_bin.txt
test_bin.cpp: In function ‘int main()’:
test_bin.cpp:19:7: error: ‘bin’ was not declared in this scope
   s = bin(num);
       ^~~
test_bin.cpp:19:7: note: suggested alternative: ‘main’
   s = bin(num);
       ^~~
       main
